--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
+description: 吾心吾行澄如明镜，所作所为皆为正义
 header-img: "img/tag-bg.jpg"
 ---
 
